# bughouse

./: .env.example  .gitignore  Makefile  compose.traefik.yml  compose.yml  pyproject.toml
services/alembic/: alembic.ini  env.py
services/alembic/versions/: 076c9a68e820_first_migration.py
services/backend/: __main__.py  config.py  main.py  redis.py  response.py  token.py
services/backend/api/: __init__.py  auth.py  game.py  ranking_param.py  user.py
services/backend/depends/: __init__.py  database.py  user.py
services/backend/exceptions/: __init__.py  base.py  s400.py  s401.py  s403.py  s404.py  s409.py  s422.py  s500.py
services/backend/schemas/: __init__.py  game.py  ranking_param.py  user.py
services/backend/services/: __init__.py  anti_spam.py  auth.py  game.py  ranking_param.py  user.py
services/fill_db/: __main__.py
services/nginx/: nginx.conf
shared/database/: __init__.py  main.py
shared/database/models/: __init__.py  base.py  game.py  game_user.py  move.py  ranking_param.py  user.py
shared/database/repositories/: __init__.py  base.py  game.py  ranking_param.py  user.py
shared/infrastructure/: __init__.py  config.py  logger.py  redis.py
